--- a/consumer/Dockerfile
+++ b/consumer/Dockerfile
@@ -13,6 +13,7 @@ RUN  pip install --trusted-host pypi.python.org -r requirements.txt
 # Define environment variable
 ENV KAFKA_BROKERS kafka1:9092
 ENV KAFKA_ENV LOCAL
+ENV KAFKA_API ""
 # Runs container API when started
 CMD ["python", "TraceContainerEventsApp.py"]
 
