fix issue in scoring agent

--- a/scoring/eventConsumer/Dockerfile
+++ b/scoring/eventConsumer/Dockerfile
@@ -14,6 +14,6 @@ ENV KAFKA_BROKERS kafka1:9092
 ENV KAFKA_ENV LOCAL
 ENV KAFKA_API ""
 
-CMD ["python", "ScoringApp.py"]
+CMD ["python", "ScoringAgent.py"]
 
 
