--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ scoring/webapp/__pycache__/
 scoring/webapp/infrastructure/__pycache__
 scoring/webapp/domain/__pycache__
 consumer/__pycache__/
+consumer/*.pem
+simulator/*.pem
+scoring/eventConsumer/*.pem
 scoring/eventConsumer/__pycache__/
 scoring/eventConsumer/infrastructure/__pycache__
 scoring/eventConsumer/domain/__pycache__
