--- a/docker/backbone-compose.yml
+++ b/docker/backbone-compose.yml
@@ -31,3 +31,13 @@ services:
             - /var/run/docker.sock:/var/run/docker.sock
         depends_on:
             - zookeeper1
+    postgresql1:
+        image: postgres
+        hostname: postgres
+        restart: always
+        ports:
+            - "5432:5432"
+        volumes:
+            - ./postgres-data:/var/lib/postgresql/data
+        environment:
+            POSTGRES_PASSWORD: supersecret
