--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ scoring/eventConsumer/infrastructure/__pycache__
 scoring/eventConsumer/domain/__pycache__
 site/
 scripts/setenv.sh
+simulator/cert.pem
