change in simulator and notebook for pg

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 simulator/scripts/setenv.sh
-docker/cert.pem
+docker/*.pem
 ml/.ipynb_checkpoints
 simulator/__pycache__/
 simulator/domain/__pycache__/
@@ -17,7 +17,6 @@ scoring/eventConsumer/domain/__pycache__
 site/
 docker/postgres-data/
 scripts/setenv.sh
-simulator/cert.pem
 .vscode/
 .postgresql/
 .local/
