Update table generation for dB

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ repo_url: https://github.com/ibm-cloud-architecture/refarch-reefer-ml
 nav:
   - Introduction: index.md
   - Collect data: collect-data.md
-  - Define the predictive scoring model: /#2-define-the-predictive-scoring-model
+  - Define the predictive scoring model: https://ibm-cloud-architecture.github.io/refarch-reefer-ml/#2-define-the-predictive-scoring-model
   - Build and run the solution on Openshift: build-run.md
   - Run integration tests: integration-tests.md
   - Reefer predictive maintenance problem: predictive-maintenance.md
