work on improving the model

--- a/simulator/Dockerfile
+++ b/simulator/Dockerfile
@@ -12,7 +12,8 @@ RUN  pip install --trusted-host pypi.python.org -r requirements.txt
 
 # Define environment variable
 ENV KAFKA_BROKERS kafka1:9092
-ENV KAFKA_ENV LOCAL
+ENV KAFKA_API ""
+ENV KAFKA_CERT /opt/app-root/src/es-cert.pem
 EXPOSE 8080
 # Runs container API when started
 CMD ["gunicorn", "-b", "0.0.0.0:8080" , "wsgi"]
