--- a/scoring/eventConsumer/Dockerfile
+++ b/scoring/eventConsumer/Dockerfile
@@ -11,9 +11,8 @@ RUN  pip install --trusted-host pypi.python.org -r requirements.txt
 
 # Define environment variable
 ENV KAFKA_BROKERS kafka1:9092
-ENV KAFKA_ENV LOCAL
 ENV KAFKA_API ""
-
+ENV KAFKA_CERT /opt/app-root/src/es-cert.pem
 CMD ["python", "ScoringAgent.py"]
 
 
