fix issue in simulator deployment and add kafka to pandas notebook

--- a/simulator/chart/kcontainer-reefer-simulator/templates/deployment.yaml
+++ b/simulator/chart/kcontainer-reefer-simulator/templates/deployment.yaml
@@ -70,4 +70,9 @@ spec:
               secretKeyRef:
                 name: "{{ .Values.eventstreams.apikeyConfigMap }}"
                 key: binding
+          - name: KAFKA_CERT
+            valueFrom:
+              secretKeyRef:
+                name: "{{ .Values.kafka.capemSecret }}"
+                key: binding
           {{- end }}
