--- a/simulator/chart/kcontainer-reefer-simulator/values.yaml
+++ b/simulator/chart/kcontainer-reefer-simulator/values.yaml
@@ -22,6 +22,7 @@ kafka:
   brokersConfigMap: demo-kafka-brokers
   telemetryTopicName: reeferTelemetries
   containerTopicName: containers
+  capemSecret: es-cert-pem
 eventstreams:
   enabled: true
   apikeyConfigMap: demo-es-apikey
