--- a/simulator/Dockerfile
+++ b/simulator/Dockerfile
@@ -13,7 +13,7 @@ RUN  pip install --trusted-host pypi.python.org -r requirements.txt
 # Define environment variable
 ENV KAFKA_BROKERS kafka1:9092
 ENV KAFKA_API ""
-ENV KAFKA_CERT /opt/app-root/src/es-cert.pem
+ENV KAFKA_CERT ""
 EXPOSE 8080
 # Runs container API when started
 CMD ["gunicorn", "-b", "0.0.0.0:8080" , "wsgi"]
