Added revisionHistoryLimit to chart
Signed-off-by: Rick Osowski <rosowski@gmail.com>

--- a/simulator/chart/kcontainer-reefer-simulator/templates/deployment.yaml
+++ b/simulator/chart/kcontainer-reefer-simulator/templates/deployment.yaml
@@ -3,9 +3,10 @@ kind: Deployment
 metadata:
   name: {{ include "kcontainer-reefer-simulator.fullname" . }}
   labels:
-{{ include "kcontainer-reefer-simulator.labels" . | indent 4 }} 
+{{ include "kcontainer-reefer-simulator.labels" . | indent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   selector:
     matchLabels:
       app.kubernetes.io/name: {{ include "kcontainer-reefer-simulator.name" . }}
