--- a/simulator/chart/kcontainer-reefer-simulator/values.yaml
+++ b/simulator/chart/kcontainer-reefer-simulator/values.yaml
@@ -3,6 +3,7 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
+revisionHistoryLimit: 1
 
 image:
   repository: ibmcase/kcontainer-reefer-simulator
