--- a/simulator/Pipfile
+++ b/simulator/Pipfile
@@ -16,6 +16,8 @@ pandas = "*"
 pytest = ">=5.3.1"
 pytest-cov = ">=2.7.1"
 flake8 = ">=3.7.8"
+pymongo = "*"
+dnspython = "*"
 
 [requires]
 python_version = "3.7"
