--- a/simulator/requirements.txt
+++ b/simulator/requirements.txt
@@ -4,20 +4,21 @@ attrs==19.3.0
 click==7.0
 confluent-kafka==1.2.0
 coverage==4.5.4
+dnspython==1.16.0
 entrypoints==0.3
 flake8==3.7.9
 flasgger==0.9.3
 flask-restful==0.3.7
 flask==1.1.1
 gunicorn==20.0.4
-importlib-metadata==1.1.0 ; python_version < '3.8'
+importlib-metadata==1.3.0 ; python_version < '3.8'
 itsdangerous==1.1.0
 jinja2==2.10.3
 jsonschema==2.6.0
 markupsafe==1.1.1
 mccabe==0.6.1
 mistune==0.8.4
-more-itertools==8.0.0
+more-itertools==8.0.2
 numpy==1.17.4
 packaging==19.2
 pandas==0.25.3
@@ -26,6 +27,7 @@ prometheus-client==0.7.1
 py==1.8.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
+pymongo==3.10.0
 pyparsing==2.4.5
 pytest-cov==2.8.1
 pytest==5.3.1
