--- a/scoring-mp/pom.xml
+++ b/scoring-mp/pom.xml
@@ -24,6 +24,7 @@
             <artifactId>microProfile-3.0</artifactId>
             <type>esa</type>
         </dependency>
+       
         <!-- For tests -->
         <dependency>
             <groupId>junit</groupId>
@@ -43,18 +44,26 @@
             <version>3.2.6</version>
             <scope>test</scope>
         </dependency>
+           <!-- JSON binding API -->
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.json</artifactId>
-            <version>1.0.4</version>
-            <scope>test</scope>
+            <version>1.1.4</version>
         </dependency>
-        <!-- JSON-B API -->
+        <dependency>
+		    <groupId>javax.json.bind</groupId>
+		    <artifactId>javax.json.bind-api</artifactId>
+		    <version>1.0</version>
+		</dependency>
+		<dependency>
+  		<groupId>com.google.code.gson</groupId>
+		  <artifactId>gson</artifactId>
+		  <version>2.8.6</version>
+		</dependency>
         <dependency>
             <groupId>org.eclipse</groupId>
             <artifactId>yasson</artifactId>
             <version>1.0.5</version>
-            <scope>test</scope>
         </dependency>
         <!-- Support for JDK 9 and above -->
         <dependency>
