--- a/simulator/app-deploy.yaml
+++ b/simulator/app-deploy.yaml
@@ -2,16 +2,13 @@ apiVersion: appsody.dev/v1beta1
 kind: AppsodyApplication
 metadata:
   annotations:
-    commit.image.appsody.dev/author: Jerome Boyer <boyerje@us.ibm.com>
-    commit.image.appsody.dev/committer: Jerome Boyer <boyerje@us.ibm.com>
+    commit.image.appsody.dev/author: Jerome Boyer <jerome.boyer@gmail.com>
+    commit.image.appsody.dev/committer: GitHub <noreply@github.com>
     commit.image.appsody.dev/contextDir: /simulator
-    commit.image.appsody.dev/date: Tue Jan 7 21:42:49 2020 -0800
-    commit.image.appsody.dev/message: Merge branch 'master' of https://github.com/jbcodeforce/refarch-reefer-ml
-    image.opencontainers.org/created: "2020-01-08T17:00:34-08:00"
-    image.opencontainers.org/documentation: https://github.com/jbcodeforce/refarch-reefer-ml
-    image.opencontainers.org/revision: 44ee771eaa7eb8d5392717ef971f5d7009d8aa3c-modified
-    image.opencontainers.org/source: https://github.com/jbcodeforce/refarch-reefer-ml/tree/master
-    image.opencontainers.org/url: https://github.com/jbcodeforce/refarch-reefer-ml
+    commit.image.appsody.dev/date: Thu Jan 9 17:38:19 2020 -0800
+    commit.image.appsody.dev/message: 'Merge pull request #19 from jbcodeforce/master'
+    image.opencontainers.org/created: "2020-01-10T14:00:37-06:00"
+    image.opencontainers.org/revision: bad18355674e29a1b423c06815ae9a503b61ffb7-modified
     stack.appsody.dev/configured: docker.io/appsody/python-flask:0.1
     stack.appsody.dev/created: 2019-11-14T10:29:19+0000
     stack.appsody.dev/revision: b3e8a19b0a4b66a69daa8d1106f37bbe4167693a
@@ -22,8 +19,25 @@ metadata:
     stack.appsody.dev/version: 0.1.6
   name: reefer-simulator
 spec:
-  applicationImage: dev.local/reefer-simulator
+  applicationImage: ibmcase/kcontainer-reefer-simulator:appsody-v2
   createKnativeService: false
+  env:
+  - name: KAFKA_BROKERS
+    valueFrom:
+      configMapKeyRef:
+        key: brokers
+        name: kafka-brokers
+  - name: TELEMETRY_TOPIC
+    value: reo-reeferTelemetries
+  - name: CONTAINER_TOPIC
+    value: reo-containers
+  - name: KAFKA_APIKEY
+    valueFrom:
+      secretKeyRef:
+        key: binding
+        name: eventstreams-apikey
+  - name: KAFKA_CERT
+    value: /certs/es-cert.pem
   expose: true
   livenessProbe:
     failureThreshold: 12
@@ -42,4 +56,12 @@ spec:
     type: NodePort
   stack: python-flask
   version: 1.0.0
+  volumeMounts:
+  - mountPath: /certs
+    name: eventstreams-cert-pem
+  volumes:
+  - name: eventstreams-cert-pem
+    secret:
+      optional: true
+      secretName: eventstreams-cert-pem
 status: {}
