Reset topic names to defaults
Signed-off-by: Rick Osowski <rosowski@gmail.com>

--- a/simulator/app-deploy.yaml
+++ b/simulator/app-deploy.yaml
@@ -28,9 +28,9 @@ spec:
         key: brokers
         name: kafka-brokers
   - name: TELEMETRY_TOPIC
-    value: reo-reeferTelemetries
+    value: reeferTelemetries
   - name: CONTAINER_TOPIC
-    value: reo-containers
+    value: containers
   - name: KAFKA_APIKEY
     valueFrom:
       secretKeyRef:
