Update GH actions to use appsody
Signed-off-by: Rick Osowski <rosowski@gmail.com>

--- a/.github/workflows/dockerbuild.yaml
+++ b/.github/workflows/dockerbuild.yaml
@@ -73,7 +73,7 @@ jobs:
         | cut -d : -f 2,3 \
         | tr -d \")
         echo "Latest Appsody Release found: ${APPSODY_RELEASE}"
-        wget -qi ${APPSODY_RELEASE}
+        wget ${APPSODY_RELEASE}
         sudo apt install -f ./appsody_*_amd64.deb
         cd ${WORKDIR}
         appsody build --tag ${IMAGE_NAME}:${IMAGE_TAG} --push
