Update appsody app-deploy.yaml with corrected image name
Signed-off-by: Rick Osowski <rosowski@gmail.com>

--- a/simulator/app-deploy.yaml
+++ b/simulator/app-deploy.yaml
@@ -19,7 +19,7 @@ metadata:
     stack.appsody.dev/version: 0.1.6
   name: reefer-simulator
 spec:
-  applicationImage: ibmcase/kcontainer-reefer-simulator:appsody-v2
+  applicationImage: ibmcase/kcontainer-reefer-simulator-appsody:0.1.21
   createKnativeService: false
   env:
   - name: KAFKA_BROKERS
