--- a/scoring-mp/pom.xml
+++ b/scoring-mp/pom.xml
@@ -59,10 +59,21 @@
             <version>2.3.0</version>
         </dependency>
         <dependency>
+            <groupId>org.eclipse.microprofile.reactive.streams</groupId>
+            <artifactId>microprofile-reactive-streams-operators</artifactId>
+            <version>1.0-RC3</version>
+        </dependency>
+        <!-- Included io.smallrye.reactive below
+            <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
             <version>1.7.25</version>
         </dependency>
+        <dependency>
+            <groupId>io.smallrye.reactive</groupId>
+            <artifactId>smallrye-reactive-messaging-kafka</artifactId>
+            <version>1.0.3</version>
+        </dependency>-->
         <!-- ADDED TO GET REACTIVE MESSAGING TO WORK -->
         <!-- For tests -->
         <dependency>
